@@ -1,4 +1,5 @@
 4.6.3:
+  * Implements "dbenv.log_flush()".
   * Regression: bug when creating a transaction and its
     parent is explicitly set to 'None'.
   * Regression: bug when duplicationg cursors. Solved.
